Added knn with user profiles as input

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,6 @@
 -Build an item-item collaborative engine (e.g. takes 1 movie as input and returns k-neighbours similar movies)
 -Build a user-item collaborative engine (e.g. based on all your ratings, return k-neighbours based on similar user's tastes)
+
+-Find some "golden list" to compare my results to. e.g. based on a metric like rmse or WARP, OR comparing them to existing models in spotlight, lightfm and surprise
+-All algorithms need to output the same format e.g. a list of recommendations
+
